ai agent initial

--- a/content/posts/2025-04-16_AI_agents.md
+++ b/content/posts/2025-04-16_AI_agents.md
@@ -1,54 +1,41 @@
 +++
-title = '2025 04 16_AI_agents'
+title = 'Are AI Agents now ready for launch?'
 date = 2025-04-04T15:31:09+11:00
 draft = true
-tags = ['Risk', 'CIO', 'AI', 'GenAI', 'AI Governance', 'Risk Management']
+tags = ['CIO', 'AI Agents', 'AI', 'GenAI', 'Automation', 'Integration']
 revision = 1
 +++
 
-![ChatGPT in rough waters](https://toobstar.github.io/images/pirate-ship-chatgpt.png)
+![Ready for Launch](https://toobstar.github.io/images/caveman_boulder.jpg)
 
-As exciting as the trends around GenAI are for service and product outcomes the potential anticipated of agent based AI solutions could be able to match it in the future. The ability to define building blocks of AI capability that fit together harmoniously is the future we are imagining.   
+## AI Agents
 
-** What is an AI Agent?
-An AI agent is an autonomous or semi-autonomous program or system that perceives its environment, makes decisions, and takes actions to achieve specific goals. Think of it like a digital “robot brain” that can sense, think, and act.
+Since the start of 2024 I've been hearing about AI agents revolutionising how we work and so far that has mostly been a vision of the future. An AI agent, as opposed to a chat assistant such as ChatGPT is an autonomous application that beyond answering questions will undertake an action.  These actions could be the sorts of things you do on your computer now like sending an email, processing and moving data, or browsing the web.  They could also be the sort of thing a script or an application might currently do. 
 
-## Challenges
+The ability to define an agent that has a focus on a specific task with a definable context, and then connect agents together to undertake more complex tasks has huge potential. This process of decomposition is familiar to any engineer and the broken down tasks become much more achievable to solve with the tools we have available now.  Given each agent has a smaller focus the ability to reuse agents as building blocks becomes even more powerful. 
 
-The constraint of much enterprise I.T. is communication and interoperability between systems. There are large ecosystems of businesses that have been activate solving these challenges such as Mulesoft at the enterprise level and Zapier with a more flexible and pluggable approach.  The advantage foundational service providers have (like SalesForce, SAP etc) is that they can pitch themselves as the data management system that when holding everything can solve the interoperability problem. 
+## Tooling
 
+The tools to enable the development and operation of AI Agents has quickly developed with:
 
-
-This could be because the way agent based solutions will work may more closely match existing workflows and be easier to anticipate. 
-
-
-A complex activity with hard to predict outcomes and a variety of tasks is hard for an AI tool to solve where all context must be provided up-front. By breaking the activity into smaller tasks that may or may not be activated in the flow, but with a clear definable context for each, more complex enterprise scale problems can be solved. 
-
+- developer options such as [LangChain](https://www.langchain.com/)
+- workflow tools such as [Gumloop](https://www.gumloop.com/) and (open source) [n8n](https://n8n.io/)
+- operational and infrastructure management with the likes of [AgentOps](https://www.agentops.ai), [CrewAI](https://www.crewai.com), and (open source)
+[OpenDevin](https://github.com/All-Hands-AI/OpenHands)
 
 
+## Challenges 
 
-The nature of automation driven by AI requires that instead of a complex process with unpredictable processes to be undertaken with , a complex process into bite size portions each step can be described in 
-
-
-
-
-AI middleware
-OpenAI announced support for MCP, a standard protocol proposed by Anthropic a while ago to make it easier for AI agents to talk to other kinds of software (Uber, Instacart, Oracle, Salesforce). This is basically middleware, and developers always want that, but there are always two basic problems that are really hard to overcome.
-
-First, you’re trying to abstract very different and complex pieces of software into a standardised universal layer, and that creates a ‘lowest common denominator’ problem - the middleware can never support all the features the underlying tools create (see Steve Jobs’ ‘Notes on Flash’). Second, why would, say, Instacart want to become a dumb API call for someone else’s trillion dollar company? Instacart makes all its profits from ads, Uber wants to upsell you a black car and a subscription, and Salesforce want you to to use its new LLM tools - they don’t want someone else to control their user experience and own their customer. LINK
+The constraint of much enterprise I.T. is communication and interoperability between systems. There are large ecosystems of businesses that have been active solving these challenges such as [Mulesoft](https://www.mulesoft.com/) and [Zapier](https://zapier.com).  The advantage foundational service providers have (the likes of Microsoft, SalesForce) is that they can try and solve the interoperability challenge by holding (or vacuuming up) all the data.  This is a powerful advantage which they are trying to leverage now with the likes of [Agentforce](https://www.salesforce.com/au/agentforce/). 
 
 
+## Solving interoperability
 
-hi! Sharing some thoughts ahead as a bit of a forcing function (to aid my motivation) and also to see if anyone else has a shared curiosity.  :slightly_smiling_face:   Perhaps you have a problem that could be solved or automated using one of the approaches below.
+The initial solution for this was to take a leaf out of past engineering approachs such as automating QA and have the AI Agent drive a browser and replicate (literally) the work of a human to solve the access constraint. This naive approach may work in some cases but is likely to not be desirable for service providers so is not a stable solution to consider.  Recently there has been momentum bulding behind a standard protocol for communication called [Model Context Protocol (MCP)](https://www.anthropic.com/news/model-context-protocol) which was created by Anthropic.
 
-Something I’m interested in pursuing is how AI tooling can be used to to improve the role I.T. plays in enterprise.  This article has a good overview of the context & opportunity ahead.
+> The Model Context Protocol is an open standard that enables developers to build secure, two-way connections between their data sources and AI-powered tools. The architecture is straightforward: developers can either expose their data through MCP servers or build AI applications (MCP clients) that connect to these servers.
 
-The challenge is connecting the silo’ed systems (data) together in a useful way.    The Prospection way is to use more “startup” type services like Zapier.   And more recently I’ve stopped using Zapier and can do much of what it does plus a bunch more using Google Apps Script.   A modern version of the no-code approach is an AI-first automation platform such as Gumloop.  Or Google acquired a company which does something similar called Appsheet .
-Recent innovations with agent based approaches inform where this is headed (exciting stuff) but they only work where they can connect with the system holding the data.  The possibilities via Databricks are for sure compelling for us, but perhaps not what I have in mind for “enterprise” challenges.
-We have extended our use of SalesForce in to their AI services via Einstein Conversation insights and will likely further extend that to Slack in the new year.  This sits in the silo’ed data space and relies on us making data available to SalesForce to be effective.
-Finally it seems like a hack-y approach but these prominent AI companies are recently working out how to make their tools use keyboards & mice to just do what humans would otherwise do to break down the data silos.
-https://www.anthropic.com/news/3-5-models-and-computer-use
-https://www.theinformation.com/briefings/google-is-developing-ai-to-take-over-computers
-Not sure where this ends up but lots of opportunity ahead.
-
+[Recently OpenAI](https://x.com/sama/status/1904957253456941061) announced their support for MCP which has driven significant energy behind this [to become a universal standard](https://arstechnica.com/information-technology/2025/04/mcp-the-new-usb-c-for-ai-thats-bringing-fierce-rivals-together/). 
+  
+ 
 
