--- a/content/posts/2025-04-16_AI_agents.md
+++ b/content/posts/2025-04-16_AI_agents.md
@@ -31,15 +31,15 @@ The constraint of much enterprise I.T. is interoperability between systems and t
 
 ## Solving interoperability
 
-The initial solution for this was to take a leaf out of past engineering approachs such as automating QA and have the AI Agent drive a browser and replicate (literally) the work of a human to solve the access constraint. This naive approach may work in some cases but is likely to not be desirable for service providers so is not a stable solution to consider.  Recently there has been momentum bulding behind a standard for communication called [Model Context Protocol (MCP)](https://www.anthropic.com/news/model-context-protocol) which was created by Anthropic.
+The initial solution for this was to take a leaf out of past engineering approachs such as automating QA and have the AI Agent drive a browser and replicate (literally) the work of a human to solve the access constraint. This naive approach may work in some cases but is likely to not be desirable for service providers so is not a stable solution to consider.  A possible solution for this is a standard for communication called [Model Context Protocol (MCP)](https://www.anthropic.com/news/model-context-protocol) which was created by Anthropic.
 
 > The Model Context Protocol is an open standard that enables developers to build secure, two-way connections between their data sources and AI-powered tools. The architecture is straightforward: developers can either expose their data through MCP servers or build AI applications (MCP clients) that connect to these servers.
 
-[Recently OpenAI](https://x.com/sama/status/1904957253456941061) announced their support for MCP which has driven significant energy behind this [to become a universal standard](https://arstechnica.com/information-technology/2025/04/mcp-the-new-usb-c-for-ai-thats-bringing-fierce-rivals-together/).
+[Recently OpenAI](https://x.com/sama/status/1904957253456941061) announced their support for MCP which has driven significant momentum behind this [to become a universal standard](https://arstechnica.com/information-technology/2025/04/mcp-the-new-usb-c-for-ai-thats-bringing-fierce-rivals-together/).  Although it's still early days for this approach it is quite promising.  
 
 ## Is it now ready for use?
 
-The short answer is YES.  With a multitude of tooling options, and standards emerging to facilitate interoperability, there is no reason to wait further for the dust to settle on AI Agents.  Here is some further guidance on key factors when deciding whether a task might be well suited to implementation by an AI Agent:
+The short answer is YES.  With a multitude of tooling options, and standards emerging to facilitate interoperability, there is no reason to wait further for the dust to settle on AI Agents.  Here is some further guidance on key factors when considering whether a task might be well suited to implementation by an AI Agent:
 
 - **Task Clarity and Structure**
 There are clear objectives, known constraints, and the activity can be expressed in logical steps or patterns.
@@ -61,7 +61,6 @@ Does the context change over time requiring ongoing adaptation?
 
 - **Risk and Supervision**
 What sort of oversight and traceability is required?  What would be the impact of a wrong outcome? 
-
 
 
   
