--- a/content/posts/2025-04-16_AI_agents.md
+++ b/content/posts/2025-04-16_AI_agents.md
@@ -20,9 +20,9 @@ The tools to enable the development and operation of AI Agents have developed qu
 
 - developer options like [LangChain](https://www.langchain.com/)
 - visual workflow tools such as [Gumloop](https://www.gumloop.com/) and (open source) [n8n](https://n8n.io/)
+- AI agent via SaaS such as [Manus](https://manus.im)
 - operational and infrastructure management with the likes of [AgentOps](https://www.agentops.ai), [CrewAI](https://www.crewai.com), and (open source)
 [OpenDevin](https://github.com/All-Hands-AI/OpenHands)
-
 
 ## Challenges 
 
