--- a/content/posts/2025-04-10_apra.md
+++ b/content/posts/2025-04-10_apra.md
@@ -1,5 +1,5 @@
 +++
-title = 'Overview of Risk and information-security oversight for financial services businesses in Australia and a comparison with ISO 27001'
+title = 'Overview of Risk and Security for financial services businesses in Australia and a comparison with ISO 27001'
 date = 2025-04-10T09:10:13+10:00
 draft = true
 tags = ['CISO', 'Risk', 'Security', 'Australia']
@@ -11,11 +11,11 @@ revision = 1
 
 ## Introduction
 
-Given my extensive experience with ISO 27001 I was interested to learn more about the related information security and risk management obligations for financial services businesses in Australia. Licensed financial service providers and also businesses selling software and services to those providers are subject to the oversight of standards created by APRA  (Australian Prudential Regulation Authority).  The standards themselves are described via a CPS (Cross-industry Prudential Standard) which APRA creates and enforces.  
+Given my extensive experience with ISO 27001 I was interested to learn more about the related information security and risk management obligations for financial services businesses in Australia. Licensed financial service providers and businesses selling software and services to those providers are subject to the oversight of standards created by APRA  (Australian Prudential Regulation Authority).  The standards themselves are known as CPSs (Cross-industry Prudential Standard) which APRA manages and enforces.  
 
 The sorts of busineses that are licensed financial service providers with this oversight are banks, insurers and superannuation providers.  Due to the nature of managing supply-chain risk the oversight of APRA has expanded to include businesses providing services to these providers as well but this oversight is indirect and these businesses are only subject to a subset of the obligations.   
 
-The CPS standards have a list of requirements which are a mix of principles based guidance (that are open to intepretation on implementation) and more prescriptive requirements.  There are potential sancations for organisations which breach their compliance obligations. 
+The CPS standards have a list of requirements which are a mix of principles based guidance (that are open to intepretation on implementation) and more prescriptive requirements.  There are potential sanctions for organisations which breach their compliance obligations. 
  
 
 ## Enforcement
@@ -43,22 +43,24 @@ APRA uses a variety of methods to ensure compliance to the CPS which include:
 
 ## Overview
  
-Here is an overview of the relevant APRA standards for risk and cybersecurity and the year from which they became enforceable. You can see that these are relatively new obligations that are developing and being rolled out quite quickly. 
+Here is a summary of the relevant APRA standards for risk and information-security and the year from which they became enforceable. You can see that these are relatively new standards that are developing and being rolled out quite quickly. 
 
 ##### CPS 220 - Risk Management (2015)
 There must be a formal process in place for identifying, assessing, managing and monitoring risks. That includes board level accountability and oversight, and specifics around defining a risk tolerance for the company, the scope of risks to consider, and methods of treating, reporting and revising the risks. Although CPS 220 includes consideration of the supply chain there is no obligation for service providers to provide implement or consider the standard themselves.  
 
 ##### CPS 232 - Business Continuity Management (2017)
-Financial service providers are typically fulfilling critical services that enable the economy and continuity of that is an important part of the obligations imposed on these businesses. 
+Financial service providers are typically fulfilling critical services that enable the economy and continuity of that is an important part of the obligations imposed on these businesses. These standards ensure formal and test continuity management processes are in place. 
 
 ##### CPS 234 - Information Security (2019)
-Information security has increasing become a focus of APRA and CPS 234 was the formalisation of these standards.  It includes board level accountability along with the various governance and monitoring requirements to ensure information security is effective in the organisation.  It also explicitly requires APRA-regulated companies to verify their third-party suppliers.    
+Information security was increasing become a focus of APRA and CPS 234 was the formalisation of this when it was released.  It includes board level accountability along with the various governance and monitoring requirements to ensure information security is effective in the organisation.  It also explicitly requires APRA-regulated companies to verify their third-party suppliers.    
 
 ##### CPS 230 - Operational Risk Management (2025)
 Operational risk management extends the focus areas of CPS 220 and CPS 232 to a more unified approach to managing operational risk. It includes the key requirements of these standards, but expands on the internal controls, and the management and reporting of adverse operational events. It also (like CPS 234) places oversight obligations on service providers 
 
 
 ## APRA CPS Standards and ISO 27001
+
+There are many significant areas of overlap between the CPS standards and ISO 27001 so complying with both or switching between the standards shouldn't be too hard. Here is a summary of key similarities and points of difference: 
 
 | Key Area                         | CPS 234 (Information Security)                       | CPS 230 (Operational Risk)                            | ISO 27001 (ISMS)                                                        |
 | -------------------------------- | ---------------------------------------------------- | ----------------------------------------------------- | ----------------------------------------------------------------------- |
