--- a/content/posts/2025-04-10_apra.md
+++ b/content/posts/2025-04-10_apra.md
@@ -1,7 +1,7 @@
 +++
 title = 'Overview of Risk and Security for financial services businesses in Australia and a comparison with ISO 27001'
 date = 2025-04-10T09:10:13+10:00
-draft = true
+draft = false
 tags = ['CISO', 'Risk', 'Security', 'Australia']
 revision = 1
 +++
